objects/hed__Address__c.object
<CustomObject><fields>
        <fullName>hed__Address_Type__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__Default_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this the Default Address to use for the Household and its Contacts?</inlineHelpText>
        <label>Default Address</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Formula_MailingAddress__c</fullName>
        <formula>hed__MailingStreet__c &amp; BR() &amp;
hed__MailingStreet2__c &amp; IF(LEN(hed__MailingStreet2__c)&gt;0, BR(), "") &amp; 
hed__MailingCity__c &amp; IF(LEN(hed__MailingCity__c) &gt; 0, ", ", "") &amp; hed__MailingState__c &amp; " " &amp; hed__MailingPostalCode__c 
&amp; IF(LEN(hed__MailingCountry__c)&gt;0, BR() &amp; hed__MailingCountry__c, "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Formula_MailingStreetAddress__c</fullName>
        <formula>hed__MailingStreet__c + IF(ISNULL(hed__MailingStreet2__c), '', ', ' + TRIM(hed__MailingStreet2__c))</formula>
        <label>Mailing Street Address</label>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Geolocation__c</fullName>
        <description>Location expressed as latitude and longitude.</description>
        <inlineHelpText>Location expressed as latitude and longitude.</inlineHelpText>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields><fields>
        <fullName>hed__Latest_End_Date__c</fullName>
        <inlineHelpText>The most recent ending date that this Address was used for this Household.</inlineHelpText>
        <label>Latest End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>hed__Latest_Start_Date__c</fullName>
        <inlineHelpText>The most recent starting date that this Address was used for this Household.</inlineHelpText>
        <label>Latest Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>hed__MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__MailingCountry__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__MailingPostalCode__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__MailingState__c</fullName>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__MailingStreet2__c</fullName>
        <label>Mailing Street2</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>hed__MailingStreet__c</fullName>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Account this Address is for.</inlineHelpText>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Parent_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact this address is for.</description>
        <inlineHelpText>The Contact this address is for.</inlineHelpText>
        <label>Parent Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Seasonal_End_Day__c</fullName>
        <inlineHelpText>The day of the month when this address no longer replaces the default address.</inlineHelpText>
        <label>Seasonal End Day</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__Seasonal_End_Month__c</fullName>
        <inlineHelpText>The month of the year when this address no longer replaces the default address.</inlineHelpText>
        <label>Seasonal End Month</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__Seasonal_End_Year__c</fullName>
        <description>The year when this address no longer replaces the default address.</description>
        <inlineHelpText>The year when this address no longer replaces the default address.</inlineHelpText>
        <label>Seasonal End Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>hed__Seasonal_Start_Day__c</fullName>
        <inlineHelpText>The day of the month when this address replaces the default address.</inlineHelpText>
        <label>Seasonal Start Day</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__Seasonal_Start_Month__c</fullName>
        <inlineHelpText>The month of the year when this address replaces the default address.</inlineHelpText>
        <label>Seasonal Start Month</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__Seasonal_Start_Year__c</fullName>
        <description>The year when this address replaces the default address.</description>
        <inlineHelpText>The year when this address replaces the default address.</inlineHelpText>
        <label>Seasonal Start Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>hed__HEDA_Address_Compact_Layout</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><deprecated>false</deprecated><description>Stores address information. To support multiple and seasonal addresses.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Address</label><nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Addresses</pluralLabel><sharingModel>Read</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>